# python-starter-kit

./: LICENSE  README.md
architecture/: index.md
fastapi-starter/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
fastapi-starter/app/: config.py  main.py
fastapi-starter/app/controllers/: __init__.py  external_controller.py  health_controller.py
fastapi-starter/app/helpers/: __init__.py  http_client.py  logger.py
fastapi-starter/app/middleware/: error_handler.py
fastapi-starter/app/routes/: __init__.py  external_api.py  health.py
fastapi-starter/app/services/: __init__.py  external_api_service.py
fastapi-starter/backend/: .gitignore  README.md  env.placeholder  pyproject.toml  render.yaml
fastapi-starter/backend/app/: __init__.py  main.py
fastapi-starter/backend/app/Models/: base.py  board.py  comment.py  data_models.py  domain_models.py  embedded_movie.py  movie.py  prediction.py  theater.py  user.py
fastapi-starter/backend/app/config/: settings.py
fastapi-starter/backend/app/constant/: __init__.py
fastapi-starter/backend/app/db/: mongodb.py
fastapi-starter/backend/app/middlewares/: __init__.py  error_handler.py
fastapi-starter/backend/app/modules/api/v1/: api.py
fastapi-starter/backend/app/modules/api/v1/boards/: controller.py  routes.py  service.py
fastapi-starter/backend/app/modules/api/v1/comments/: controller.py  routes.py  service.py
fastapi-starter/backend/app/modules/api/v1/embedded_movies/: controller.py  routes.py  service.py
fastapi-starter/backend/app/modules/api/v1/external_api/: controller.py  helper.py  routes.py  service.py
fastapi-starter/backend/app/modules/api/v1/health/: controller.py  routes.py
fastapi-starter/backend/app/modules/api/v1/ml/: controller.py  routes.py  service.py
fastapi-starter/backend/app/modules/api/v1/movies/: controller.py  routes.py  service.py
fastapi-starter/backend/app/modules/api/v1/theaters/: controller.py  routes.py  service.py
fastapi-starter/backend/app/utils/: http_client.py  prediction_repository.py
fastapi-starter/backend/app/validations/: board_schema.py  comment_schema.py  embedded_movie_schema.py  ml_schema.py  movie_schema.py  pagination.py  theater_schema.py
fastapi-starter/backend/tests/integration/: test_ml_routes.py
fastapi-starter/backend/tests/unit/: test_ml_service.py
fastapi-starter/frontend/: .editorconfig  .prettierignore  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json
fastapi-starter/frontend/src/: App.tsx  index.css  main.tsx
fastapi-starter/frontend/src/components/dashboard/: BoardSection.tsx  HistorySection.tsx  MLHistorySection.tsx  MLStatsDashboard.tsx  MovieSection.tsx  SentimentSection.tsx
fastapi-starter/frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
fastapi-starter/frontend/src/components/shared/: Button.tsx  Chip.tsx  FormField.tsx  LoadingOverlay.tsx  LoadingSpinner.tsx  PageHeader.tsx  Pagination.tsx  RefetchButton.tsx  SearchInput.tsx  SkeletonLoader.tsx  index.ts
fastapi-starter/frontend/src/constants/: index.ts
fastapi-starter/frontend/src/context/: AppContext.ts  AppProvider.tsx
fastapi-starter/frontend/src/pages/Comments/: CommentsPage.tsx
fastapi-starter/frontend/src/pages/Dashboard/: DashboardPage.tsx
fastapi-starter/frontend/src/pages/ML/: MLPage.tsx
fastapi-starter/frontend/src/pages/Movies/: MoviesPage.tsx
fastapi-starter/frontend/src/pages/Theaters/: TheatersPage.tsx
fastapi-starter/frontend/src/store/: api.ts  commentsApi.ts  embeddedMoviesApi.ts  index.ts  mlApi.ts  moviesApi.ts  theatersApi.ts
fastapi-starter/frontend/src/types/: index.ts
fastapi-starter/frontend/src/utils/: index.ts
fastapi-starter/github/: CODEOWNERS
fastapi-starter/tests/: __init__.py  test_api.py
starter_kit/: .gitignore  README.md  main.py  (+6 more)
(+134 files in other folders)
