# Modern Python project configuration using UV package manager
# This replaces the traditional requirements.txt approach

[project]
name = "fastapi-ml-starter"
version = "1.0.0"
description = "Modern Python FastAPI project with external API integration"
authors = [
    {name = "Ragul Palanisamy"}
]
readme = "README.md"
requires-python = ">=3.10"

# Core dependencies - these are the packages your project needs to run
dependencies = [
    "fastapi>=0.109.0",        # Modern web framework for building APIs
    "uvicorn[standard]>=0.27.0",  # ASGI server to run FastAPI
    "pydantic>=2.5.0",         # Data validation using Python type hints
    "pydantic-settings>=2.1.0", # Settings management with environment variables
    "httpx>=0.26.0",           # Async HTTP client for calling external APIs
    "python-dotenv>=1.0.0",    # Load environment variables from .env file
    "python-multipart>=0.0.6", # For form data and file uploads
]

# Development dependencies - only needed during development
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",           # Testing framework
    "pytest-asyncio>=0.21.0",  # Async support for pytest
    "httpx>=0.26.0",           # For testing HTTP requests
    "ruff>=0.1.0",             # Fast Python linter and formatter
]

# Build system configuration - tells UV how to build the project
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling build configuration - specifies which packages to include
[tool.hatch.build.targets.wheel]
packages = ["app"]

# Ruff configuration for code quality
[tool.ruff]
line-length = 100
target-version = "py310"

# Pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
